2002-10-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRunLoop.m: ([-runMode:beforeDate:]) permit the use of a
	nil date and document it.  This is the behavior MacOS seems to have
	and seems to be more useful than prohibiting nil dates.

2002-10-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDistributedLock.m: Document and tidy.
	* Source/NSTimeZone.m: Don't set system zone prematurely.
	* Source/NSString.m: Don't bother to cache constant string
	class.  Document it.

2002-10-01  Adam Fedor  <fedor@gnu.org>

	* config/pathxml.m4: Filter -L/usr/lib out of XML_LIBS.
	* configure: Regenerate.

2002-10-01 02:21  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSUserDefaults.m (-synchronize): Handle lockDate being nil.

2002-09-30  Richard Frith-Macdonald <rfm@gnu.org>

	* NSTimeZones/NSTimeZones.tar: Updated to latest information.
	* Source/NSCalendarDate.m: Tidy up a little.
	* Source/NSTimeZone.m: Rewrite main timezone code for performance -
	Roughly doubles speed of most NSCalendarDate stuff.
	* NSThread.m: Fix for single threaded operation ... suggested by
	Ludovic Marcotte.

2002-09-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m: Encapsulate read and write operations in
	new low level methods to ease subclassing.
	* SSL/GSSSLHandle.m: Use new read and write methods to simplify. 

2002-09-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendarDate.m: Fix problem with signed/unsigned type
	conversion when initialising a date at a daylight savings time
	boundary, and attempt to improve the code for adding offsets to
	dates.
	* Source/Makefile.postamble: patch to fix some warnings in
	uninstall (by David Ayers).

2002-09-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: ([GSTcphandle+initialize]) ignore SIGPIPE in
	case a socket gets closed while we are writing.

2002-09-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: Fix typo.
